[gd_scene load_steps=2 format=3 uid="uid://quest_panel"]

[ext_resource type="Script" path="res://scripts/ui/quest_panel.gd" id="1_quest_panel"]

[node name="QuestPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_quest_panel")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 0.95)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "任务"

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
text = "×"

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="日常任务" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2

[node name="DailyQuestList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/日常任务"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="周常任务" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="WeeklyQuestList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/周常任务"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="成就" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="AchievementList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/成就"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="RefreshInfo" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DailyRefreshLabel" type="Label" parent="MarginContainer/VBoxContainer/RefreshInfo"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.6, 0.6, 0.7, 1)
text = "日常刷新: --:--:--"

[node name="WeeklyRefreshLabel" type="Label" parent="MarginContainer/VBoxContainer/RefreshInfo"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.6, 0.6, 0.7, 1)
text = "周常刷新: --:--:--"
horizontal_alignment = 2
